# morocco-prices

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.hive  Dockerfile.spark  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/airflow/dags/: maprix_pipeline.py  maprix_scrapers.py
config/grafana/dashboards/: maprix_overview.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/kafka/schemas/: raw_faostat.avsc  raw_hcp.avsc  raw_manual.avsc  raw_news.avsc  raw_wfp.avsc  raw_worldbank.avsc
config/prometheus/: prometheus.yml
config/promtail/: promtail-config.yml
data/backfill/: selina_history.csv
data/gold/: morocco_prices.csv
data/manual/: historical_anchors.csv
data/seeds/: locations.csv  products.csv  sources.csv
docs/: 01_architecture.md  02_data_model.md  03_product_catalog.md  04_infrastructure.md  05_phases.md  06_logging.md
docs/sources/: all_sources.md  price_research_2026.md  sheep_prices.md
scripts/: backfill_selina_history.py  calendar_morocco.py  db.py  export_dataset.py  generate_dim_time.py  init_delta_all.py  init_delta_bronze.py  init_delta_gold.py  init_delta_silver.py  init_kafka_topics.sh  init_postgres.sql  run_collectors.py  run_processing.py  run_scrapers.py  seed_all.py  seed_locations.py  seed_products.py  seed_sources.py  spark_session.py  verify_data.py
src/: config.py
src/adapters/http/: api_client.py  scraper.py
src/adapters/kafka/: avro_serde.py  producer.py
src/adapters/spark/: build_medallion.py
src/api/: app.py  deps.py
src/api/routes/: prices.py  products.py  sources.py  stats.py
src/collectors/: __init__.py  base_scraper.py  faostat.py  faostat_cp.py  faostat_parser.py  manual.py  numbeo.py  numbeo_parser.py  selina.py  selina_parser.py  worldbank.py
src/core/: chain.py  registry.py
src/core/models/: dimensions.py  enums.py  errors.py  observation.py  price.py
src/core/ports/: collector.py  publisher.py  storage.py  transformer.py
src/core/quality/: rules.py  validator.py
src/core/transformers/: currency_converter.py  deduplicator.py  inflation_adjuster.py  outlier_flagger.py  unit_normalizer.py
src/logging/: setup.py
src/warehouse/: dimension_lookup.py  insert_observation.py  read_prices.py  update_enriched.py
tests/: conftest.py
tests/collectors/: test_faostat.py  test_faostat_cp.py  test_manual.py  test_numbeo.py  test_selina.py  test_worldbank.py
tests/core/: test_currency_converter.py  test_deduplicator.py  test_inflation_adjuster.py  test_observation.py  test_outlier_flagger.py  test_quality.py  test_registry.py  test_unit_normalizer.py
(+1 files in other folders)
