[project]
name = "maprix"
version = "0.1.0"
description = "Morocco Price Observatory — enterprise data pipeline for historical and current price data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "wizli595" }]

dependencies = [
    # HTTP & Scraping
    "httpx>=0.27",
    "selectolax>=0.3",
    "lxml>=5.0",

    # Data Processing
    "pyspark>=3.5",
    "delta-spark>=3.1",
    "polars>=1.0",

    # Kafka
    "confluent-kafka>=2.3",
    "fastavro>=1.9",

    # Storage & Warehouse
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",

    # API
    "fastapi>=0.110",
    "uvicorn>=0.29",

    # Config & Logging
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "python-dotenv>=1.0",

    # Quality
    "great-expectations>=0.18",
    "pandera>=0.19",

    # Orchestration
    "apache-airflow>=2.9",

    # Metrics
    "prometheus-client>=0.20",

    # Utils
    "python-dateutil>=2.9",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "chispa>=0.10",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "scripts*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
]
# Project conventions: psycopg2 `cursor as PgCursor` alias (N812) and the
# domain exception names shown in CLAUDE.md without an Error suffix (N818).
ignore = ["N812", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom calls these in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Heavy optional deps (spark, kafka, airflow, great_expectations) ship no stubs.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
